# Appraizer

./: .coverage  .env.example  .gitignore  License.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
src/appraisal/: README.md  __init__.py  config.py  conformal.py  data_models.py  deployment_pipeline.py  ensemble.py  feature_engineering.py  model_components.py  population.py  routing.py  scheduler.py  shadow_canary.py  temporal_cv.py  training_pipeline.py
src/contracts/: appraisal.proto  openapi.yaml
src/infra/: kafka_topics.py  kafka_topics.yaml
src/service/: README.md  __init__.py  api.py  auth.py  canary_promoter.py  drift_detector.py  inference.py  logging_config.py  messaging.py  retraining.py  settings.py  shadow_evaluator.py  storage.py  valuations.py  vin.py
tests/: test_api.py  test_data_models.py  test_iteration2_integration.py  test_iteration3.py  test_iteration4.py  test_routing_canary_population.py  test_scheduler_and_deployment.py  test_temporal_cv.py  test_training_pipeline.py
