[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-auto-appraisal"
version = "0.1.0"
description = "AI Automobile Appraisal System prototype"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "xgboost>=2.1",
  "torch>=2.4",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "mapie>=0.9",
  "apscheduler>=3.10",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "aiokafka>=0.10",
  "joblib>=1.4",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.24",
  "aiosqlite>=0.20",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --cov=appraisal --cov=service --cov-report=term-missing"
